# vocal

./: .gitignore  README.md  pyproject.toml
-/: alpha.html  index.html
scripts/: render_autodoc.py
tests/: conftest.py  test_autodoc_command.py  test_check_command.py  test_check_spine.py  test_checking.py  test_conventions_file.py  test_exceptions.py  test_fetch.py  test_fetch_command.py  test_fetch_gate.py  test_fetch_pack.py  test_gatekeep_command.py  test_github_source.py  test_install.py  test_manifest.py  test_pack_config.py  test_placeholders.py  test_register.py  test_release.py  test_resolution.py  test_schema_types.py  test_validation.py  test_versioning.py  test_vocab.py  test_web_command.py
tests/autodoc/: test_constraints.py  test_diagnostics.py  test_pack.py  test_placeholder.py  test_renderers.py  test_rules.py  test_walkers.py
tests/fixtures/: full_product.yaml  simple_product.yaml
tests/netcdf/: test_reader.py
tests/utils/: test_conventions.py  test_product_api.py  test_registry.py  test_utils.py
tests/web/: test_api.py  test_landing.py  test_models.py
vocal/: checking.py  conventions_file.py  core.py  exceptions.py  manifest.py  pack_config.py  resolution.py  validation.py  versioning.py  vocab.py  writers.py
vocal/application/: autodoc.py  build.py  check.py  fetch.py  fetch_gate.py  gatekeep.py  github_source.py  init.py  install.py  register.py  release.py  resource.py  web.py
vocal/autodoc/: __init__.py  _introspect.py  constraints.py  diagnostics.py  ir.py  pack.py  placeholder.py  product.py  project.py  rules.py
vocal/checking/: __init__.py  checking.py  checks.py  core.py  errors.py  shared.py  status.py  utils.py
vocal/cli/: vocal.py
vocal/netcdf/: __init__.py  writer.py
vocal/types/: schema_types.py
vocal/utils/: __init__.py  conventions.py  mixins.py  placeholder.py  registry.py
(+18 files in other folders)
