[tool.poetry]
name = "faam-vocal"
version = "0.2.2"
description = "Compliance checking and metadata management"
authors = ["Dave Sproson <dave.sproson@faam.ac.uk>"]
license = "Open Government Licence v3.0"
repository = "https://github.com/FAAM-146/vocal"
readme = "README.md"
packages = [
    { include = "vocal" }
]

[tool.poetry.dependencies]
python = ">=3.12"
netcdf4 = "^1.7.2"
cfunits = "^3.3.7"
pydantic = "^2.10.3"
pyyaml = "^6.0.2"
requests = "^2.32.3"
fastapi = {extras = ["standard"], version = "^0.115.6"}

[tool.poetry.scripts]
vocal = 'vocal.cli.vocal:main'


[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
types-requests = "^2.32.0.20241016"
types-pyyaml = "^6.0.12.20241230"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
